apps/base-docs/src/components/Modal/BasenamesLaunchModal/styles.module.css
.modalContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  max-width: 300px;
  font-family: var(--cds-font-display);
  font-weight: 400;
}

.modalImageContainer {
  position: relative;
  height: auto;
  max-height: 258px;
}

.modalImage {
  height: 100%;
  width: 100%;
  object-fit: cover;
  object-position: center;
}

.modalCloseButton {
  background-color: #ffffff00;
}

.modalCloseIcon {
  position: absolute;
  top: 1.5rem;
  right: 1.5rem;
}

.modalContentContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1.5rem;
  background-color: #1e2025;
  text-align: center;
  color: white;
}

.modalContentContainer h1 {
  font-size: 3rem;
  font-weight: 400;
  line-height: 56px;
}

.modalSecondaryContentContainter {
  margin-bottom: 0.5rem;
  margin-top: 0.75rem;
  width: 100%;
  padding: 0 1rem;
}

.modalSecondaryContentContainter span {
  font-family: var(--cds-font-sans);
  line-height: 1.5rem;
}

.modalCta {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 2rem;
  width: 100%;
  font-family: var(--cds-font-display);
  text-align: center;
  font-weight: 500;
  line-height: 1.75rem;
  border-radius: 3px;
  font-size: 1rem;
  background-color: white;
  color: black;
  padding: 0.75rem;
}

.outerDialog {
  position: 'relative';
  z-index: 40;
}

.dialogBackground {
  background-color: #0a0b0d40;
  position: fixed;
  inset: 0px;
}

.dialog {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  background-color: white;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  border-radius: 0.375rem;
  width: 300px;
  height: auto;
  max-height: 100vh;
  overflow-y: scroll;
}

.dialogWrapper {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  position: fixed;
  inset: 225px 0 0 0;
  width: 100vw;
}

@media (min-width: 640px) {
  .dialog {
    width: 100%;
  }
}

@media (min-width: 768px) {
  .modalContainer {
    max-width: 441px;
  }
  .dialog {
    border-radius: 0.5rem;
  }
  .dialogWrapper {
    padding: 1rem;
    align-items: center;
    inset: 50px 0 0 0;
  }
}

